@@ -29,7 +29,7 @@ namespace Octodiff.CommandLine
             options.WriteOptionDescriptions(writer);
         }
 
-        public MemoryStream Execute(string[] commandLineArguments)
+        public MemoryStream Execute(string[] commandLineArguments, MemoryStream ms = null)
         {
             // Parse through arguments
             options.Parse(commandLineArguments);
