@@ -5,6 +5,6 @@ namespace Octodiff.CommandLine.Support
     interface ICommand
     {
         void GetHelp(TextWriter writer);
-        MemoryStream Execute(string[] commandLineArguments);
+        MemoryStream Execute(string[] commandLineArguments, MemoryStream ms = null);
     }
 }
