@@ -20,54 +20,112 @@ namespace NFT_Master
             Version v = Assembly.GetExecutingAssembly().GetName().Version;
             string version = Assembly.GetExecutingAssembly().GetName().Name + " Version " + v.Major + "." + v.Minor + "." + v.Build + " (r" + v.Revision + ")";
 
-            // Local variable setup
-            Command c = new Command();
-
             // Setup log
             Log.identifier = Environment.MachineName;
             Log.showTimestamp = true;
             Log.Info(version);
 
-            // Setup error listener
-            Thread errorThread = new Thread(new ThreadStart(ErrorReporter.Listen));
-            //errorThread.Start();
+            if (string.IsNullOrEmpty(args[0]))
+                Log.Fatal("Please enter a debug argument and try again");
 
-            //Slave.Scan(args[0]);
-
-            // Start listening to each connected slave
-            foreach (var slave in Slave.slaves)
+            // Process debug arguments
+            switch (args[0])
             {
-                SlaveListener sl = new SlaveListener(slave);
-                Thread listeningThread = new Thread(new ThreadStart(sl.Start));
-                listeningThread.Start();
+                case @"/scan":
+
+                    // Args check
+                    if (string.IsNullOrEmpty(args[1]))
+                        Log.Fatal("Scan - Missing scan range (format 192.168.0.1-10)");
+
+                    // Scan for slaves
+                    Slave.Scan(args[1]);
+
+                    // Start listening to each connected slave
+                    foreach (var slave in Slave.slaves)
+                    {
+                        SlaveListener sl = new SlaveListener(slave);
+                        Thread listeningThread = new Thread(new ThreadStart(sl.Start));
+                        listeningThread.Start();
+                    }
+
+                    // Send message to all connect slaves
+                    Command c = new Command(CommandType.Info);
+                    c.message = "Hello World! =^-^=";
+                    Slave.SendAll(c);
+
+                    Console.ReadLine();
+
+                    // Disconnect
+                    foreach (var slave in Slave.slaves)
+                        slave.Disconnect();
+
+                    Console.ReadLine();
+
+                    break;
+
+                case @"/error":
+
+                    // Setup error listener
+                    Thread errorThread = new Thread(new ThreadStart(ErrorReporter.Listen));
+                    errorThread.Start();
+
+                    Console.ReadLine();
+
+                    break;
+
+                case @"/transfer":
+
+                    if (string.IsNullOrEmpty(args[1]) || string.IsNullOrEmpty(args[2]))
+                        Log.Fatal("Missing args");
+
+                    FileOps.FetchFile(args[1], args[2]);
+
+                    Console.ReadLine();
+
+                    break;
+
+                case @"/signature":
+
+                    // Args check
+                    if (string.IsNullOrEmpty(args[1]) || string.IsNullOrEmpty(args[2]))
+                        Log.Fatal("Missing args");
+
+                    // Scan for slaves
+                    Slave.Scan(args[1]);
+
+                    // Start listening to each connected slave
+                    foreach (var slave in Slave.slaves)
+                    {
+                        SlaveListener sl = new SlaveListener(slave);
+                        Thread listeningThread = new Thread(new ThreadStart(sl.Start));
+                        listeningThread.Start();
+                    }
+
+                    // Generate signature
+                    RsyncStream rs = new RsyncStream(StreamType.Signature, RsyncOps.GenerateSignature(args[2]), args[2]);
+
+                    // Pack into command
+                    Command com = new Command(CommandType.RsyncStream);
+                    com.AddStream(rs);
+
+                    // Send to all slaves
+                    Slave.SendAll(com);
+
+                    Console.ReadLine();
+
+                    // Disconnect
+                    foreach (var slave in Slave.slaves)
+                        slave.Disconnect();
+
+                    break;
+
+                default:
+
+                    Log.Fatal("Arg not recognised");
+
+                    break;
             }
-
-            FileOps.FetchFile("http://localhost/kali.iso", @"C:\");
-
-            //c.type = CommandType.Info;
-            //c.message = "Hello World!";
-            //Slave.SendAll(new Command(CommandType.Info));
-
-            // Generate and store sig
-            //var stream = RsyncOps.GenerateSignature(@"C:\Projects\NFT\NFT_Master\bin\Debug\NFT_Core.dll");
-            //RsyncStream rs = new RsyncStream(StreamType.Signature, stream, @"C:\NFT\NFT_Master\bin\Debug\NFT_Core.dll");
-            //Log.Stream(rs);
-            //c.addStream(rs);
-            //Slave.SendAll(c);
-
-            //var peam = RsyncOps.GenerateSignature(@"C:\Projects\kali.iso");
-            //RsyncStream ds = new RsyncStream(StreamType.Signature, stream, @"C:\Projects\kali.iso");
-            //Log.Stream(ds);
-            //c.addStream(rs);
-            //Slave.SendAll(c);
-
-            Console.ReadLine();
-
-            foreach (var slave in Slave.slaves)
-                slave.Disconnect();
-
-            Console.ReadLine();
-
+ 
         }
 
         protected static void exitHandler(object sender, ConsoleCancelEventArgs args)
